Update backend API for products api
